<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/btn_dismiss"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/btnClose"
        android:src="@drawable/ic_close_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/regText1"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_dismiss" />

    <EditText
        android:id="@+id/FullNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/regFullName"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/regFullName"
        android:inputType="text"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvReg" />

    <EditText
        android:id="@+id/EmailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/regEmail"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/regEmail"
        android:inputType="textEmailAddress"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FullNameInput"/>

    <EditText
        android:id="@+id/UsernameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/regUsername"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/regUsername"
        android:inputType="text"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailInput"/>

    <TextView
        android:id="@+id/regDob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/regDob"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UsernameInput" />

    <EditText
        android:id="@+id/PhoneNumInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/regPhone"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/regPhone"
        android:inputType="phone"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regDob"/>

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/regPassword"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/regPassword"
        android:inputType="textPassword"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PhoneNumInput"/>

    <EditText
        android:id="@+id/confirmPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/regConfirmPassword"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/regConfirmPassword"
        android:inputType="textPassword"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput"/>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_primary_layout"
        android:text="@string/btnNext"
        android:textAllCaps="false"
        android:textColor="@color/colorBaseText"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordInput" />

</androidx.constraintlayout.widget.ConstraintLayout>