<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="60sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="@string/usernameemailplaceholder"
        android:hint="@string/usernameemailplaceholder"
        android:inputType="text"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordInput"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/passwordplaceholder"
        android:hint="@string/passwordplaceholder"
        android:inputType="textPassword"
        android:textColor="@color/colorAccent"
        android:backgroundTint="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameInput"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login"
        android:layout_marginTop="30dp"
        android:text="@string/btnLogin"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:textColor="@color/colorBaseText"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_primary_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput"/>

    <Button
        android:id="@+id/btn_forgotpassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/btnForgotPassword"
        android:textAllCaps="false"
        android:textColor="@color/colorSecondaryButtonText"
        android:textSize="17sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="110dp"
        android:background="@drawable/button_secondary_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/RegText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/btnReg"
        android:textColor="@color/colorAccent"
        android:layout_marginStart="70dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/btnRegHere"
        android:textColor="@color/colorHyperLink"
        android:id="@+id/btnReg"
        android:textSize="15sp"
        android:layout_marginEnd="85dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/RegText" />

</androidx.constraintlayout.widget.ConstraintLayout>