<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/btn_dismiss"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/btnClose"
        android:src="@drawable/ic_close_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/regText2"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_dismiss" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/regProfilePic"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        app:civ_border_width="1dp"
        android:src="@drawable/ic_account_picture_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvReg" />

    <TextView
        android:id="@+id/selectPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regSelectPic"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorHyperLink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regProfilePic"/>

    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginStart="26dp"
        android:text="@string/regSelectWeight"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectPhoto" />

    <FrameLayout
        android:id="@+id/frameLayoutW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="120dp"
        app:layout_constraintStart_toEndOf="@+id/tvWeight"
        app:layout_constraintTop_toBottomOf="@+id/selectPhoto">

        <EditText
            android:id="@+id/regKilo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="16sp"
            android:hint="@string/regWeightPlaceholder"
            android:textAlignment="center"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorAccent"
            android:autofillHints="@string/regWeightPlaceholder" />

        <EditText
            android:visibility="gone"
            android:id="@+id/regPounds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="16sp"
            android:hint="@string/regWeightPlaceholder"
            android:textAlignment="center"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorAccent"
            android:autofillHints="@string/regWeightPlaceholder" />

    </FrameLayout>

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weightSpinner"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:text="Kg"
        app:ms_arrow_tint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/frameLayoutW"
        app:layout_constraintTop_toBottomOf="@+id/selectPhoto" />

    <TextView
        android:id="@+id/tvHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regSelectHeight"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="35dp"
        android:layout_marginStart="26dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWeight" />

    <FrameLayout
        android:id="@+id/frameLayoutH"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="120dp"
        app:layout_constraintStart_toEndOf="@+id/tvHeight"
        app:layout_constraintTop_toBottomOf="@+id/frameLayoutW">

        <EditText
            android:id="@+id/regCm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/regHeightPlaceholder"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/regHeightPlaceholder"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/regFtIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/regWeightPlaceholder"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/regWeightPlaceholder"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:visibility="gone" />

    </FrameLayout>

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/heightSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:text="cm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/frameLayoutH"
        app:layout_constraintTop_toBottomOf="@+id/weightSpinner"
        app:ms_arrow_tint="@color/colorPrimary" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:id="@+id/physiqueSelect"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:weightSum="99"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/regBio">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryTransparent"
            android:layout_weight="33"
            android:id="@+id/ectomorphBtn"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryTransparent"
            android:layout_weight="33"
            android:id="@+id/endomorphBtn"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryTransparent"
            android:layout_weight="33"
            android:id="@+id/mesomorphBtn"/>
    </RadioGroup>

    <TextView
        android:id="@+id/tvPhysiqueDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorBaseText"
        android:textAlignment="center"
        android:background="@drawable/text_border"
        android:text="@string/physiqueDescription"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/physiqueSelect"/>

    <EditText
        android:id="@+id/regBio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/regbio"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/regbio"
        android:layout_marginTop="20dp"
        android:lines="3"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:inputType="text"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/frameLayoutH"
        tools:layout_editor_absoluteX="25dp" />

    <CheckBox
        android:id="@+id/agreeCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPhysiqueDesc" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="110dp"
        android:text="@string/agree"
        android:textColor="@color/colorHyperLink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/agreeCheck"
        app:layout_constraintTop_toBottomOf="@+id/tvPhysiqueDesc" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_primary_layout"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/btnComplete"
        android:textAllCaps="false"
        android:textColor="@color/colorBaseText"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


</androidx.constraintlayout.widget.ConstraintLayout>